<resources>
    <string name="app_name">Shopping List</string>
    <string name="admod">ca-app-pub-7036765120364615/4669858706</string>
    <!--string name="admod">ca-app-pub-3940256099942544/6300978111</string-->
    <string name="prompt_email"> Store name</string>
    <string name="duplicateName">You already have a list of these</string>
    <string name="yourlist">Your Lists</string>
    <string name="login">To the List!</string>
    <string name="welcome">List Name</string>
    <string name="makeList">Make New List </string>
    <string name="viewList">Shopping </string>
    <string name="mark">Select</string>
    <string name="item">Item </string>
    <string name="num">Number </string>
    <string name="add">Add </string>
    <string name="back">Back </string>
    <string name="save">Save </string>
    <string name="delete">Delete </string>
    <string name="copy">Copy </string>
    <string name="edit">Edit </string>
    <string name="rename">Rename </string>
    <string name="itemAdded">Item added </string>
    <string name="itemSaved">List saved! </string>
    <string name="itemNotNamed">Please give the list a name!</string>
    <string name="noList">You don\'t have any items in Your lists! Please fill it.</string>
    <string name="hintadd">If you added the wrong item, just swipe it to left and it is deleted. </string>
    <string name="pubid">pub-7036765120364615</string>
    <string name="noLongClick">Please do not use the long click!</string>
    <string-array name="list_of_items">
        <item>yoyo</item>
        <item>tupper_ware</item>
        <item>t-shirt</item>
        <item>baking sheet</item>
        <item>torch</item>
        <item>toothbrush</item>
        <item>tool</item>
        <item>toilet_paper</item>
        <item>toaster</item>
        <item>gingerbread oven</item>
        <item>thongs</item>
        <item>sunglasses</item>
        <item>stapler</item>
        <item>spice</item>
        <item>socks</item>
        <item>liquid</item>
        <item>soap</item>
        <item>rinse</item>
        <item>shovel</item>
        <item>scissors</item>
        <item>scale</item>
        <item>rouge</item>
        <item>rolling-pin</item>
        <item>record</item>
        <item>pushpin</item>
        <item>powder</item>
        <item>pottea</item>
        <item>plunger</item>
        <item>plate</item>
        <item>pizza_cutter</item>
        <item>pill_bottle</item>
        <item>pet_dish</item>
        <item>pencil</item>
        <item>pen</item>
        <item>peeler</item>
        <item>parfume</item>
        <item>pantyhose</item>
        <item>pants</item>
        <item>paint</item>
        <item>oven</item>
        <item>nail-polish</item>
        <item>mincer</item>
        <item>microwave</item>
        <item>marking_pin</item>
        <item>make_up</item>
        <item>liquid-soap</item>
        <item>knife</item>
        <item>jack-o-lantern</item>
        <item>house-cleaning</item>
        <item>hook</item>
        <item>hand-blender</item>
        <item>handbag</item>
        <item>gyufa</item>
        <item>greenpot</item>
        <item>green</item>
        <item>glue</item>
        <item>glass</item>
        <item>ginger</item>
        <item>fridge</item>
        <item>fork</item>
        <item>facial-tissue</item>
        <item>facial</item>
        <item>eyelash</item>
        <item>eggclock</item>
        <item>duster</item>
        <item>cup</item>
        <item>cosmetics</item>
        <item>corkscrew</item>
        <item>cooking_pot</item>
        <item>cooking_spoon</item>
        <item>cooker</item>
        <item>containerglass</item>
        <item>container</item>
        <item>comb</item>
        <item>color_pencils</item>
        <item>coffee-pot</item>
        <item>coffee-machine</item>
        <item>cloves</item>
        <item>chair</item>
        <item>chain</item>
        <item>canoppener</item>
        <item>candel</item>
        <item>bulb</item>
        <item>brick</item>
        <item>bottle</item>
        <item>blue</item>
        <item>blender</item>
        <item>batteryborrel</item>
        <item>battery</item>
        <item>alap</item>
        <item>basket</item>
        <item>bandages</item>
        <item>bag</item>
        <item>baby</item>
        <item>apron</item>
        <item>aluminum-foil</item>
        <item>accumulator</item>
        <item>apple juice</item>
        <item>asparagus</item>
        <item>avocado</item>
        <item>banana</item>
        <item>banana split</item>
        <item>bean</item>
        <item>beer</item>
        <item>bento</item>
        <item>birthday cake</item>
        <item>black pepper</item>
        <item>bolognese</item>
        <item>bonbon</item>
        <item>bread</item>
        <item>broccoli</item>
        <item>brochette</item>
        <item>bun</item>
        <item>burrito</item>
        <item>butter</item>
        <item>cabbage</item>
        <item>candy</item>
        <item>canne</item>
        <item>carrot</item>
        <item>celery</item>
        <item>cheese</item>
        <item>cheezy sauce</item>
        <item>cherry</item>
        <item>chicken bits</item>
        <item>chicken leg</item>
        <item>chiken</item>
        <item>chilli</item>
        <item>chinabox</item>
        <item>chips</item>
        <item>chopped meat</item>
        <item>cinnamon roll</item>
        <item>cloudberry</item>
        <item>cloudberry jam</item>
        <item>coconut cocktail</item>
        <item>coffee</item>
        <item>coktail</item>
        <item>cookie</item>
        <item>coriander</item>
        <item>corndog</item>
        <item>cotton candy</item>
        <item>cow</item>
        <item>crab</item>
        <item>crawfish</item>
        <item>croissant</item>
        <item>cucumber</item>
        <item>cupcake</item>
        <item>dim sum</item>
        <item>doughnut</item>
        <item>dolmades</item>
        <item>dragon fruit</item>
        <item>dressing</item>
        <item>duck</item>
        <item>durian</item>
        <item>egg</item>
        <item>eggplant</item>
        <item>espresso</item>
        <item>filleted fish</item>
        <item>fish</item>
        <item>french fries</item>
        <item>fried chicken</item>
        <item>garlic</item>
        <item>grapefruit</item>
        <item>grapes</item>
        <item>green olive</item>
        <item>guava</item>
        <item>ham</item>
        <item>hamburger</item>
        <item>hazelnut</item>
        <item>honey</item>
        <item>hops</item>
        <item>hot chocolate</item>
        <item>hot dog</item>
        <item>hot sauce</item>
        <item>ice</item>
        <item>icecream</item>
        <item>jelly</item>
        <item>kebab</item>
        <item>kechup</item>
        <item>kiwi</item>
        <item>lasangne</item>
        <item>leg steak</item>
        <item>lemon</item>
        <item>lettuce</item>
        <item>loin rack</item>
        <item>lollipop</item>
        <item>macaron</item>
        <item>mango</item>
        <item>mangosteen</item>
        <item>marmalade</item>
        <item>mayo</item>
        <item>milch shake</item>
        <item>milk</item>
        <item>muffin</item>
        <item>mushroom</item>
        <item>muskmelon</item>
        <item>mustar</item>
        <item>nachos</item>
        <item>noodles</item>
        <item>nut</item>
        <item>oats</item>
        <item>octopus</item>
        <item>oil</item>
        <item>olive oil</item>
        <item>onion</item>
        <item>onion sauce</item>
        <item>onion rings</item>
        <item>orange</item>
        <item>orange juice</item>
        <item>oysters</item>
        <item>pancake</item>
        <item>paprika</item>
        <item>parma ham</item>
        <item>parsnip</item>
        <item>peach</item>
        <item>peanut</item>
        <item>pear</item>
        <item>peas</item>
        <item>pepitas</item>
        <item>pie</item>
        <item>pig</item>
        <item>pinapple</item>
        <item>pizza</item>
        <item>plum</item>
        <item>pomegranate</item>
        <item>popcorn</item>
        <item>potato</item>
        <item>prawn</item>
        <item>pretzel</item>
        <item>prime rib</item>
        <item>pumpkin</item>
        <item>rack of lamb</item>
        <item>rack of ribs</item>
        <item>radish</item>
        <item>ramen</item>
        <item>raspberries</item>
        <item>rice</item>
        <item>rolled roast</item>
        <item>sace</item>
        <item>sack of flour</item>
        <item>salami</item>
        <item>salate</item>
        <item>salmon</item>
        <item>salt</item>
        <item>salt pork</item>
        <item>sardinie</item>
        <item>sausage</item>
        <item>sesame</item>
        <item>sesame oil</item>
        <item>sheep</item>
        <item>soda bottle</item>
        <item>soup</item>
        <item>soy</item>
        <item>spaghetti</item>
        <item>spinach</item>
        <item>steak</item>
        <item>strawberry</item>
        <item>sugar</item>
        <item>sugar cubes</item>
        <item>sushi</item>
        <item>sweet potato</item>
        <item>sweetener</item>
        <item>taco</item>
        <item>tea</item>
        <item>tomato</item>
        <item>tortilla</item>
        <item>turnip</item>
        <item>vinagera</item>
        <item>waffles</item>
        <item>watter melone</item>
        <item>whisky</item>
        <item>whortleberry</item>
        <item>whortleberry jelly</item>
        <item>wine bottle</item>
        <item>wrap</item>
        <item>yoghurt</item>
        <item>zucchini</item>
    </string-array>

    <string name="plsFillitem">Please enter some item to buy</string>
</resources>
